# friedegg_generator

./: CMakeLists.txt  demo.py  get_dish_edge_bag.sh  package.xml
aux_script/: dummy_pan_publisher.py  relative_trajectory_saver.py
bags/: detect_pan.sh  get_dish_edge_bag.sh
config/: basic.rviz  demo.rviz  pan_detect.rviz
launch/: demo.launch  expe_get_dish_edge.launch  expe_pan_detect.launch  find_kitchen.launch  load_rosbag.launch  reproduce_point_cloud.launch
main_script/: demo.py  reproduce_trajectory.py
node_script/: dummy_sub_object_detection.py  get_grasp_edge.py  pan_finder.py  pan_mask_image.py  pan_mask_polygon.py  pan_surface.py  tmp.py
