<?xml version="1.0"?>
<package format="2">
  <name>friedegg_generator</name>
  <version>0.0.0</version>
  <description>The friedegg_generator package</description>

  <maintainer email="hiro@todo.todo">hiro</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>jsk_perception</exec_depend>

  <export>

  </export>
</package>
